--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ github_username: clavestone
 
 # Aux links for the upper right navigation
 aux_links:
-  "Provided by Clavestone":
-    - "https://cerberus.clavestone.io/11_about.html"
+  "Daily & annual performance of bitcoin since 2013":
+    - "https://storeofvalue.clavestone.io/"
